<resources>
    <string name="app_name">SubtleNursing</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">释放立即加载</string>

    <string name="forum">讨论区</string>
    <string name="classroom">课堂</string>
    <string name="welfareCenter">福利中心</string>
    <string name="my">我的</string>
    <string name="searchwhatyouwant">搜索你想要的内容</string>
    <string name="homepage">首页</string>
    <string name="nurse">护理</string>
    <string name="recovery">康复</string>
    <string name="emotion">情感</string>
</resources>
