<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <RelativeLayout
            android:id="@+id/slider_re"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <ImageView
                android:id="@+id/info_img"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_discuss_message"
                />
            <ImageView
                android:id="@+id/publish_img"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_discuss_edit"
                />

            <TextView
                android:id="@+id/search_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/info_img"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/searchwhatyouwant"
                android:textSize="10sp"
                android:paddingLeft="30dp"
                android:gravity="center_vertical"
                android:background="@drawable/background_whiteground_whitebordercircle"
                android:layout_toLeftOf="@id/publish_img"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_search"
                android:padding="4dp"
                android:layout_alignLeft="@id/search_tv"
                />


        </RelativeLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="40dp">
        <RelativeLayout
            android:id="@+id/home_re"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/home_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage"
                android:textSize="12sp"
                android:textColor="@color/greenlight"
                android:layout_centerInParent="true"
                />
            <View
                android:id="@+id/home_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/greenlight"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/nurse_re"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/nurse_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nurse"
                android:textSize="12sp"
                android:textColor="@color/greytext"
                android:layout_centerInParent="true"
                />
            <View
                android:id="@+id/nurse_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                android:background="@color/greenlight"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/recovery_re"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/recovery_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery"
                android:textSize="12sp"
                android:textColor="@color/greytext"
                android:layout_centerInParent="true"
                />
            <View
                android:id="@+id/recovery_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                android:background="@color/greenlight"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/emotion_re"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/emotion_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotion"
                android:textSize="12sp"
                android:textColor="@color/greytext"
                android:layout_centerInParent="true"
                />
            <View
                android:id="@+id/emotion_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                android:background="@color/greenlight"/>
        </RelativeLayout>

    </LinearLayout>
    <com.example.administrator.subtlenursing.model.customview.XListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@color/transparentwhite"
        android:divider="@null">

    </com.example.administrator.subtlenursing.model.customview.XListView>



</LinearLayout>
